--- a/users/templates/home/home.html
+++ b/users/templates/home/home.html
@@ -221,8 +221,8 @@
     <h1>Welcome to Spotify Wrapper</h1>
     <p>Your favorite music, all in one place.</p>
     <div class="buttons">
-        <a href="#" class="btn btn-signup">Sign Up</a>
-        <a href="#" class="btn btn-login">Log In</a>
+        <a href="{% url 'signup' %}" class="btn btn-signup">Sign Up</a>
+        <a href="{% url 'login' %}" class="btn btn-login">Log In</a>
     </div>
 </div>
 
