--- a/users/templates/home/login.html
+++ b/users/templates/home/login.html
@@ -153,12 +153,16 @@
 
 <!-- Login Section -->
 <div class="login-container">
-    <form class="login-form" action="/login" method="POST">
+    <form class="login-form" action="{% url 'login' %}" method="POST">
+        {% csrf_token %}
         <h2>Login to Your Account</h2>
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Log In</button>
-        <p>Don't have an account? <a href="/signup" style="color: var(--btn-bg-color);">Sign Up</a></p>
+        <p>Don't have an account? <a href="{% url 'signup' %}" style="color: var(--btn-bg-color);">Sign Up</a></p>
     </form>
 </div>
 
