--- a/users/templates/home/signup.html
+++ b/users/templates/home/signup.html
@@ -107,13 +107,14 @@
 
     <!-- Sign Up Section -->
     <div class="signup-container">
-        <form class="signup-form" action="/dashboard" method="POST">
+        <form class="signup-form" action="{% url 'signup' %}" method="POST">
+            {% csrf_token %}
             <h2>Create an Account</h2>
             <input type="text" name="username" placeholder="Username" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Sign Up</button>
-            <p>Already have an account? <a href="/login" style="color: #1DB954;">Log In</a></p>
+            <p>Already have an account? <a href="{% url 'login' %}" style="color: #1DB954;">Log In</a></p>
         </form>
     </div>
 
