--- a/users/templates/registered/dashboard.html
+++ b/users/templates/registered/dashboard.html
@@ -142,7 +142,8 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Playlists</a></li>
             <li><a href="#">Search</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="{% url 'profile' %}">Profile</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
         </ul>
     </nav>
 
