--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -60,6 +60,7 @@
                 <select name="language" id="language">
                     <option value="en">English</option>
                     <option value="es">Spanish</option>
+                    <option value="es">French</option>
                     <!-- Add more languages as needed -->
                 </select>
                 <button type="submit" name="update_settings">Update Settings</button>
